--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,10 @@
           value=""
         /><br /><br />
         <label for="">Gender</label>
-        <input type="radio" name="gender" id="" /><label for="">Male</label>
-        <input type="radio" name="gender" id="" /><label for="">Female</label
+        <label for="male">
+        <input type="radio" name="gender" id="male" value="Male"/>Male</label>
+        <label for="female">
+        <input type="radio" name="gender" id="female" value="Female"/>Female</label
         ><br /><br />
         <label for="">Message</label><br />
         <textarea name="yourmessge" id="" cols="30" rows="10"></textarea><br />
